[gd_scene load_steps=11 format=3 uid="uid://6qrnui754hcx"]

[ext_resource type="Shader" path="res://scenes/Enemies/drone.gdshader" id="1_k0pca"]
[ext_resource type="Texture2D" uid="uid://bcr7axwu3ikur" path="res://graphics/enemies/drone.png" id="1_xypy5"]
[ext_resource type="Script" path="res://scenes/Enemies/drone.gd" id="1_y13ec"]
[ext_resource type="Texture2D" uid="uid://clwylejr5m2xu" path="res://graphics/explosions/explosion_1.png" id="3_xbkfq"]
[ext_resource type="AudioStream" uid="uid://rdrgetcxkwho" path="res://audio/solid_impact.ogg" id="5_87f8o"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cx8nc"]
shader = ExtResource("1_k0pca")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/progress = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_5xlx1"]
radius = 6623.01

[sub_resource type="Animation" id="Animation_olqbm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Explosion:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [14]
}

[sub_resource type="Animation" id="Animation_fjh7k"]
resource_name = "explosion"
length = 1.88
step = 0.04
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Explosion:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.04, 0.08, 0.12, 0.16, 0.2, 0.24, 0.28, 0.32, 0.36, 0.4, 0.44, 0.48, 0.56, 0.6, 0.64, 0.68, 0.72, 0.76, 0.8, 0.84, 0.88, 0.92, 0.96, 1, 1.04, 1.08, 1.12, 1.16, 1.2, 1.24, 1.28, 1.32, 1.36, 1.4, 1.44, 1.48, 1.52, 1.56, 1.6, 1.64, 1.68, 1.72, 1.76, 1.8, 1.84),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 28, 29, 27, 31, 32, 33, 34, 35, 36, 37, 38, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Explosion:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Drone:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.36),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.88),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"explosion_status_update"
}, {
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4qabj"]
_data = {
"RESET": SubResource("Animation_olqbm"),
"explosion": SubResource("Animation_fjh7k")
}

[node name="Drone" type="CharacterBody2D" groups=["Entity"]]
collision_layer = 2
collision_mask = 15
script = ExtResource("1_y13ec")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-5, -72, -21, -66, -25, -71, -31, -69, -33, -62, -53, -45, -60, -42, -63, -37, -148, -17, -145, -11, -141, -7, -146, -3, -146, 3, -151, 4, -151, 16, -127, 14, -123, 8, -114, 13, -75, 10, -62, 43, -57, 47, -57, 51, -47, 60, -44, 58, -6, 70, 4, 70, 32, 60, 38, 61, 43, 61, 51, 52, 62, 32, 67, 5, 108, 1, 118, -5, 123, 2, 147, -2, 145, -15, 141, -15, 138, -22, 133, -25, 138, -29, 138, -35, 60, -43, 52, -43, 39, -61, 32, -61, 29, -68, 23, -71, 19, -67, 12, -67, 3, -73)

[node name="Drone" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_cx8nc")
texture = ExtResource("1_xypy5")

[node name="Notice Area" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Notice Area"]
shape = SubResource("CircleShape2D_5xlx1")

[node name="Explosion" type="Sprite2D" parent="."]
texture = ExtResource("3_xbkfq")
hframes = 8
vframes = 8
frame = 14

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4qabj")
}

[node name="HurtAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_87f8o")

[node name="NavigationTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[connection signal="body_entered" from="Notice Area" to="." method="_on_notice_area_body_entered"]
[connection signal="timeout" from="NavigationTimer" to="." method="_on_navigation_timer_timeout"]
